// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostSerializer : create : should return post 1`] = `
{
  "data": {
    "attributes": {
      "authorId": 2,
      "content": "Hello",
    },
    "id": "3",
    "links": {
      "self": "http://localhost:5000/api/post/3",
    },
    "type": "Post",
  },
}
`;

exports[`PostSerializer : getAll : should return array posts 1`] = `
{
  "data": [
    {
      "attributes": {
        "authorId": 2,
        "content": "Hello",
      },
      "id": "2",
      "links": {
        "self": "http://localhost:5000/api/post/2",
      },
      "type": "Post",
    },
    {
      "attributes": {
        "authorId": 1,
        "content": "World",
      },
      "id": "1",
      "links": {
        "self": "http://localhost:5000/api/post/1",
      },
      "type": "Post",
    },
  ],
  "links": {
    "self": "Links",
  },
}
`;

exports[`PostSerializer : getOne : should return post 1`] = `
{
  "data": {
    "attributes": {
      "authorId": 2,
      "content": "Hello",
    },
    "id": "1",
    "links": {
      "self": "http://localhost:5000/api/post/1",
    },
    "type": "Post",
  },
}
`;
